--- a/style.css
+++ b/style.css
@@ -122,7 +122,9 @@ i {
     font-size: 25px;
     padding: 5px;
 }
-
+#mainArea {
+    margin: 0 auto ;
+}
 #hoodies1 {
     display: flex;
     align-items: center;
